--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
+  "type": "module",
   "name": "frontend-project-11",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/SibirskayaDaria/frontend-project-11/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/SibirskayaDaria/frontend-project-11/actions)",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "node": "^21.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.8",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.9.0",
+    "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^3.3.4",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
