--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.9.0",
     "html-webpack-plugin": "^5.6.0",
+    "postcss-loader": "^7.3.4",
+    "sass": "^1.69.7",
+    "sass-loader": "^13.3.3",
     "style-loader": "^3.3.4",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
