--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "node": "^21.2.0"
+    "i18next": "^23.8.1",
+    "node": "^21.2.0",
+    "on-change": "^5.0.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.8",
