--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "i18next": "^23.8.1",
     "node": "^21.2.0",
