--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "[![Actions Status](https://github.com/SibirskayaDaria/frontend-project-11/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/SibirskayaDaria/frontend-project-11/actions)",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --mode development"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +16,13 @@
     "i18next": "^23.8.1",
     "node": "^21.2.0",
     "on-change": "^5.0.1",
+    "playwright": "^1.41.2",
     "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.8",
+    "@playwright/test": "^1.41.2",
+    "@types/node": "^20.11.16",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.9.0",
     "html-webpack-plugin": "^5.6.0",
