--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,5 +17,5 @@ extends:
   - "plugin:jest/recommended"
 
 rules:
-  no-console: 0
-  import/extensions: 0
+  "no-console": 0
+  "import/extensions": 0
