--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,22 +1,16 @@
----
-root: true
-
-plugins:
-  - jest
-  - babel
-
 env:
-  node: true
-  jest: true
   browser: true
-
-parser: "@babel/eslint-parser"
+  es2021: true
 
 extends:
   - airbnb-base
-  - plugin:jest/recommended
-
+overrides: []
+parserOptions:
+  ecmaVersion: latest
+  sourceType: module
 rules:
   no-console: 0
-  "import/extensions": 0
-
+  import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
+    - error
+    - ignorePackages
+    - js: always
