--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "name": "frontend-project-11",
+  "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/SibirskayaDaria/frontend-project-11/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/SibirskayaDaria/frontend-project-11/actions)",
   "main": "index.js",
