--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -19,6 +19,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Hexlet project check
-        uses: hexlet/project-action@r20.0.0
+        uses: hexlet/project-action@20.0.0
         with:
           hexlet-id: ${{ secrets.HEXLET_ID }}
