--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ coverage
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
