--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "i18next": "^23.8.1",
+    "lodash": "^4.17.21",
     "on-change": "^5.0.1",
     "playwright": "^1.41.2",
     "yup": "^1.3.3"
@@ -24,6 +25,7 @@
     "@types/node": "^20.11.16",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "html-webpack-plugin": "^5.6.0",
     "postcss-loader": "^7.3.4",
     "sass": "^1.69.7",
