--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,6 +10,7 @@ parserOptions:
   sourceType: module
 rules:
   no-console: 0
+  'no-param-reassign': off # Отключаем правило no-param-reassign
   import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
     - error
     - ignorePackages
