--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "type": "module",
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/SibirskayaDaria/frontend-project-11/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/SibirskayaDaria/frontend-project-11/actions)",
+  "description": "rss-reader is a versatile RSS feed aggregator service designed to streamline the reading experience across a multitude of sources, including blogs and other content providers.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -20,10 +22,6 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.8",
-    "@playwright/test": "^1.41.2",
-    "@types/node": "^20.11.16",
-    "babel-loader": "^9.1.3",
     "css-loader": "^6.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "html-webpack-plugin": "^5.6.0",
