--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.2",
     "css-loader": "^6.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "html-webpack-plugin": "^5.6.0",
