--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "type": "module",
-  "name": "@hexlet/code",
-  "version": "1.0.0",
-  "description": "rss-reader is a versatile RSS feed aggregator service designed to streamline the reading experience across a multitude of sources, including blogs and other content providers.",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production",
-    "lint": "eslint .",
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@playwright/test": "^1.41.2",
-    "axios": "^1.6.7",
-    "bootstrap": "^5.3.2",
-    "i18next": "^23.8.2",
-    "lodash": "^4.17.21",
-    "on-change": "^5.0.1",
-    "playwright": "^1.41.2",
-    "yup": "^1.3.3"
-  },
-  "devDependencies": {
-    "css-loader": "^6.9.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "html-webpack-plugin": "^5.6.0",
-    "postcss-loader": "^7.3.4",
-    "sass": "^1.69.7",
-    "sass-loader": "^13.3.3",
-    "style-loader": "^3.3.4",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  }
+    "type": "module",
+    "name": "@hexlet/code",
+    "version": "1.0.0",
+    "description": "rss-reader is a versatile RSS feed aggregator service designed to streamline the reading experience across a multitude of sources, including blogs and other content providers.",
+    "main": "index.js",
+    "scripts": {
+      "start": "webpack serve --mode development",
+      "build": "webpack --mode production",
+      "lint": "eslint .",
+      "test": "jest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+      "css-loader": "^6.9.0",
+      "eslint": "^8.7.0",
+      "eslint-config-airbnb-base": "^16.0.3",
+      "eslint-plugin-import": "^2.25.4",
+      "html-webpack-plugin": "^5.6.0",
+      "postcss-loader": "^7.3.4",
+      "sass": "^1.39.0",
+      "sass-loader": "^13.3.3",
+      "style-loader": "^3.3.4",
+      "webpack": "^5.69.0",
+      "webpack-cli": "^4.9.1",
+      "webpack-dev-server": "^4.15.1"
+      },
+    "dependencies": {
+      "axios": "^1.6.7",
+      "bootstrap": "^5.3.2",
+      "i18next": "^23.8.2",
+      "lodash": "^4.17.21",
+      "on-change": "^5.0.1",
+      "yup": "^1.3.3"
+    }
 }
